# mailing_list_service

./: LICENSE  README.md  env.simple  pyproject.toml
blogs_app/: forms.py  models.py  urls.py  views.py
blogs_app/fixtures/: blog_data.json
blogs_app/migrations/: 0001_initial.py
blogs_app/templatetags/: my_custom_filters.py
config/: settings.py  urls.py
fixtures/: groups_permissions.json
mailing_app/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
mailing_app/fixtures/: attemptsend_data.json  customers_data.json  mailing_data.json  message_data.json
mailing_app/migrations/: 0001_initial.py  0002_alter_mailing_periodicity.py  0002_initial.py  0003_alter_mailing_customers_alter_mailing_datetime_and_more.py  0003_message_created_at.py  0004_alter_attemptsend_mailing_and_more.py  0004_customers_date_creation_client.py  0005_alter_attemptsend_attempt_status.py  0005_alter_attemptsend_attempt_status_and_more.py  0006_alter_attemptsend_options_and_more.py  0007_alter_mailing_periodicity.py  0008_mailing_status_alter_attemptsend_attempt_status.py  0009_alter_attemptsend_options_and_more.py  0010_rename_datetime_mailing_start_time_and_more.py  0011_alter_attemptsend_attempt_status_and_more.py  0012_customers_unique_client_and_more.py  0013_rename_unique_client_customers_unique_clients.py  0014_alter_mailing_status.py  0015_mailing_end_time_alter_mailing_start_time.py  0016_alter_mailing_options.py  0017_mailing_mailing_is_disabled.py
users_app/: admin.py  forms.py  models.py  urls.py  views.py
(+34 files in other folders)
