[tool.poetry]
name = "mailing-list-service"
version = "0.1.0"
description = ""
authors = ["Aristov Sergei <maxmit83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
ipython = "^8.23.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
django-crontab = "^0.7.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
